# Scalable-CCD

./: .gitignore  CMakeLists.txt  README.md  ScalableCCDOptions.cmake.sample
.github/workflows/: continuous.yml
app/: CMakeLists.txt  io.cpp  io.hpp  main.cpp  main1.cu  main2.cu  test.cu  testdistributed.cu  testproducerconsumer.cu
apps/: CMakeLists.txt  ground_truth.cpp  ground_truth.hpp  io.cpp  io.hpp  main_narrow_phase.cu  main_stq.cpp  main_stq.cu  main_tight_inclusion.cu  testdistributed.cu  testproducerconsumer.cu
cmake/recipes/: libigl.cmake  sample_data.cmake
cmake/scalable_ccd/: scalable_ccd_filter_flags.cmake  scalable_ccd_use_colors.cmake  scalable_ccd_warnings.cmake
src/scalable_ccd/: CMakeLists.txt  config.hpp  config.hpp.in  scalar.hpp
src/scalable_ccd/broad_phase/: CMakeLists.txt  aabb.cpp  aabb.hpp  sort_and_sweep.cpp  sort_and_sweep.hpp
src/scalable_ccd/common/: CMakeLists.txt  scalar.cuh  scalar.hpp
src/scalable_ccd/cuda/: CMakeLists.txt  assert.cuh  ccd.cu  ccd.cuh  ipc_ccd_strategy.cu  ipc_ccd_strategy.hpp  limits.cuh  memory_handler.cpp  memory_handler.cuh  memory_handler.hpp  scalar.cu  scalar.cuh  types.cuh
src/scalable_ccd/cuda/broad_phase/: CMakeLists.txt  aabb.cu  aabb.cuh  broad_phase.cu  broad_phase.cuh  broad_phase_multigpu.cu  broad_phase_multigpu.cuh  collision.cu  collision.cuh  queue.cu  queue.cuh  sweep.cu  sweep.cuh  util.cu  util.cuh  utils.cu  utils.cuh
src/scalable_ccd/cuda/broad_phase/_mulitgpu/: broad_phase.cuh  sweep.cu  sweep.cuh
src/scalable_ccd/cuda/broad_phase/_multigpu/: broad_phase.cu
src/scalable_ccd/cuda/narrow_phase/: CMakeLists.txt  ccd_buffer.cuh  ccd_config.cuh  ccd_data.cuh  interval.cuh  narrow_phase.cu  narrow_phase.cuh  root_finder.cu  root_finder.cuh
src/scalable_ccd/cuda/stq/: CMakeLists.txt  aabb.cu  aabb.cuh  broad_phase.cu  broad_phase_multigpu.cu  broad_phase_multigpu.cuh  broadphase.cu  broadphase.cuh  broadphase_multigpu.cu  broadphase_multigpu.cuh  collision.cu  collision.cuh  io.cu  io.cuh  pca.cu  pca.cuh  queue.cu  queue.cuh  sweep.cu  sweep.cuh  timer.cuh  types.cuh  util.cu  util.cuh
src/scalable_ccd/cuda/tight_inclusion/: CMakeLists.txt  helper.cu  helper.cuh  narrow_phase.cu  record.hpp  root_finder.cu  root_finder.cuh  timer.cuh  type.hpp
src/scalable_ccd/cuda/utils/: CMakeLists.txt  assert.cuh  atomic_min_float.cuh  device_buffer.cuh  device_matrix.cuh  device_variable.cuh  dispatch.cuh  profiler.cpp  profiler.hpp  record.cuh  timer.cuh
src/scalable_ccd/stq/: CMakeLists.txt  aabb.cpp  aabb.hpp  sweep.cpp  sweep.hpp
src/scalable_ccd/stq/cpu/: CMakeLists.txt  aabb.cpp  aabb.hpp  io.cpp  io.hpp  sweep.cpp  sweep.hpp
src/scalable_ccd/stq/cuda/: CMakeLists.txt  aabb.cu  aabb.cuh  broadphase.cu  broadphase.cuh  collision.cu  collision.cuh  groundtruth.cu  groundtruth.cuh  io.cu  io.cuh  memory.cuh  pca.cu  pca.cuh  queue.cu  queue.cuh  sweep.cu  sweep.cuh  timer.cuh  types.cu  types.cuh  util.cu  util.cuh
src/scalable_ccd/tight_inclusion/: CMakeLists.txt
src/scalable_ccd/tight_inclusion/cuda/: helper.cu  helper.cuh  record.hpp  root_finder.cu  root_finder.cuh  timer.cuh  type.hpp
src/scalable_ccd/utils/: CMakeLists.txt  logger.cpp  logger.hpp  merge_local_overlaps.cpp  merge_local_overlaps.hpp  pca.cpp  pca.hpp  profiler.cpp  profiler.hpp  timer.hpp
tests/: CMakeLists.txt  ground_truth.cpp  ground_truth.hpp  io.cpp  io.hpp  main.cpp  test_broad_phase.cpp  test_broad_phase.cu  test_cuda_stq.cpp  test_narrow_phase.cu  test_producer_consumer.cu  testdistributed.cu
tools/: CType.cu  CType.cuh
